--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -2,22 +2,22 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container-lg my-3">
-        <div class="row my-2">
-            <div class="col-4">
+        <div class="row my-2 justify-content-center">
+            <div class="col-12 col-sm-8 col-md-4">
                 <div class="alert alert-success text-center" role="alert">
                     <p>Technician</p>
                     <p>Email: tech@example.com</p>
                     <p>Password: 123</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-8 col-md-4">
                 <div class="alert alert-success text-center" role="alert">
                     <p>Tutor</p>
                     <p>Email: tutor@example.com</p>
                     <p>Password: 123</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-8 col-md-4">
                 <div class="alert alert-success text-center" role="alert">
                     <p>Student</p>
                     <p>Email: student@example.com</p>
